[package]
name = "fail"
version = "2.2.17"
description = "Solana SBF test program written in Rust"
authors = ["X1 Labs maintainers <maintainers@x1.xyz>"]
repository = "https://github.com/x1-labs/tachyon"
license = "Apache-2.0"
homepage = "https://x1.xyz"
edition = "2021"
publish = false

[dependencies]
solana-account-info = "=2.2.0"
solana-program-entrypoint = "=2.2.0"
solana-program-error = "=2.2.0"
solana-pubkey = "=2.2.0"

[lib]
crate-type = ["cdylib"]

[workspace]
