[package]
name = "noop"
version = "2.0.27"
description = "Solana SBF test program written in Rust"
authors = ["X1 Labs maintainers <maintainers@x1.xyz>"]
repository = "https://github.com/x1-labs/tachyon"
license = "Apache-2.0"
homepage = "https://x1.xyz"
edition = "2021"
publish = false

[dependencies]
solana-program = { path = "../../../../program", version = "=2.0.27" }

[lib]
crate-type = ["cdylib"]

[workspace]
